--- a/1-Initial discovery.ipynb
+++ b/1-Initial discovery.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6a2ad548",
    "metadata": {},
    "outputs": [],
@@ -11,19 +11,20 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n"
+    "import seaborn as sns\n",
+    "from config import DATA_PATH"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9aa9fb2d",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Importando el dataset como un DataFram de pandas\n",
-    "df_original = pd.read_csv(r\"C:\\Users\\jrjim\\Downloads\\dataset_salud_500k\\dataset_salud_500k.csv\")\n",
-    "df = pd.read_csv(r\"C:\\Users\\jrjim\\Downloads\\dataset_salud_500k\\dataset_salud_500k.csv\")"
+    "df_original = pd.read_csv(DATA_PATH)\n",
+    "df = df_original.copy()"
    ]
   },
   {
