fixed fillna lines

--- a/2-Data Cleaning and exporting to postgres.ipynb
+++ b/2-Data Cleaning and exporting to postgres.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "47486f9b",
    "metadata": {},
    "outputs": [
@@ -106,10 +106,8 @@
    ],
    "source": [
     "#1-Lidiar con los null de 'gender' y 'visit_type', usando MODE\n",
-    "# df['categorical_column'].fillna(df['categorical_column'].mode()[0], inplace=True)\n",
-    "\n",
-    "df['gender'].fillna(df['gender'].mode()[0], inplace=True)\n",
-    "df['visit_type'].fillna(df['visit_type'].mode()[0], inplace=True)\n"
+    "df = df.fillna({'gender': df['gender'].mode()[0]})\n",
+    "df = df.fillna({'visit_type': df['visit_type'].mode()[0]})\n"
    ]
   },
   {
