typo fix in 01 and 02

--- a/2-Data Cleaning and exporting to postgres.ipynb
+++ b/2-Data Cleaning and exporting to postgres.ipynb
@@ -2251,7 +2251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "389142fa",
    "metadata": {},
    "outputs": [
@@ -2259,19 +2259,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                             patient_id   age gender  visit_date  \\\n",
-      "0  bdd640fb-0667-4ad1-9c80-317fa3b1799d  92.0      M  2023-03-11   \n",
-      "1  23b8c1e9-3924-46de-beb1-3b9046685257  82.0      M  2020-08-14   \n",
-      "2  bd9c66b3-ad3c-4d6d-9a3d-1fa7bc8960a9   4.0      M  2023-01-03   \n",
-      "3  972a8469-1641-4f82-8b9d-2434e465e150  96.0      F  2020-06-15   \n",
-      "4  17fc695a-07a0-4a6e-8822-e8f36c031199  61.0      M  2021-11-05   \n",
+      "                             patient_id    age gender  visit_date  \\\n",
+      "0  bdd640fb-0667-4ad1-9c80-317fa3b1799d   92.0      M  2023-03-11   \n",
+      "1  23b8c1e9-3924-46de-beb1-3b9046685257   82.0      M  2020-08-14   \n",
+      "2  bd9c66b3-ad3c-4d6d-9a3d-1fa7bc8960a9    4.0      M  2023-01-03   \n",
+      "3  972a8469-1641-4f82-8b9d-2434e465e150   96.0      F  2020-06-15   \n",
+      "4  17fc695a-07a0-4a6e-8822-e8f36c031199   61.0      M  2021-11-05   \n",
+      "5  9a1de644-815e-46d1-bb8f-aa1837f8a88b   10.0      F  2022-04-25   \n",
+      "6  b74d0fb1-32e7-4629-8fad-c1a606cb0fb3   92.0      F  2023-07-17   \n",
+      "7  6b65a6a4-8b81-48f6-b38a-088ca65ed389  111.0      F  2023-04-27   \n",
+      "8  47378190-96da-4dac-b2ff-5d2a386ecbe0   64.0      F  2022-01-14   \n",
+      "9  c241330b-01a9-471f-9e8a-774bcf36d58b   77.0      F  2022-10-31   \n",
       "\n",
-      "      specialty                    diagnosis          procedure  \\\n",
-      "0     Pediatría                    Sunt cum.       Consequatur.   \n",
-      "1  Dermatología            Temporibus dolor.      Qui eligendi.   \n",
-      "2    Cardiolgia          Porro optio facere.   Fugiat pariatur.   \n",
-      "3       Cirujia  Necessitatibus tempora eum.             Eaque.   \n",
-      "4  Dermatología                     Quam in.  Cupiditate ullam.   \n",
+      "          specialty                    diagnosis          procedure  \\\n",
+      "0         Pediatría                    Sunt cum.       Consequatur.   \n",
+      "1      Dermatología            Temporibus dolor.      Qui eligendi.   \n",
+      "2        Cardiolgia          Porro optio facere.   Fugiat pariatur.   \n",
+      "3           Cirujia  Necessitatibus tempora eum.             Eaque.   \n",
+      "4      Dermatología                     Quam in.  Cupiditate ullam.   \n",
+      "5       Cardiología                   Rem error.         Quis quia.   \n",
+      "6  Medicina Interna                    Est ipsa.       Porro error.   \n",
+      "7  Medicina Interna                       Ipsum.          Pariatur.   \n",
+      "8           Cirugía              Error deserunt.           Ad quis.   \n",
+      "9  Medicina Interna           Itaque reiciendis.         Doloribus.   \n",
       "\n",
       "                              doctor_id                           hospital_id  \\\n",
       "0  d8473694-cda8-4947-88dd-38b5c72bcefe  0fd45397-be87-48cf-94b4-180186eac1d4   \n",
@@ -2279,20 +2289,47 @@
       "2  09c54acd-f0ad-4a23-a5e2-d34d414d62bd  2fdd830b-52c8-45f5-b383-230c17dd7c22   \n",
       "3  bf5f0e16-c161-488e-ae99-8ecf7fb825dc  3697c736-77c4-4cc4-a6ae-b696bc49d111   \n",
       "4  d1a80cba-621f-478a-9576-d97aa95c27b4  a89ff296-918d-474f-a697-a6e17330e3ce   \n",
+      "5  57f2fade-bcdb-418e-8ae9-d1ec7722f2ef  4535d77b-8ad3-48dc-b585-3886955211c6   \n",
+      "6  7b2e513c-5ef5-4ee3-9685-79d94a3c7f80  fbe293ac-2b46-4d0d-a881-5159019f2ccf   \n",
+      "7  94d5ceab-4dad-42eb-9d5f-fcdeccc7e435  1c5f42ca-9fd8-4a24-b320-dbc8f7f5c33a   \n",
+      "8  3ab2d499-9e90-4417-91fc-1a46a4d4eea6  233a10ea-9a89-4454-b7df-bbaf9914b2ae   \n",
+      "9  57c4ded5-c784-4f8d-85ad-b60bcb995fe0  e50d7015-fe87-439b-b2b7-e2cec8cec7b9   \n",
       "\n",
-      "               city    country       visit_type  visit_duration_minutes  \\\n",
-      "0          Santiago  Argentina         Consulta                     486   \n",
-      "1            Bogotá  Argentina  Hospitalización                     572   \n",
-      "2  Ciudad de México      Chile       Emergencia                     101   \n",
-      "3          Santiago    Ecuador       Emergencia                     589   \n",
-      "4              Lima      Chile         Consulta                       8   \n",
+      "               city               country       visit_type  \\\n",
+      "0          Santiago             Argentina         Consulta   \n",
+      "1            Bogotá             Argentina  Hospitalización   \n",
+      "2  Ciudad de México                 Chile       Emergencia   \n",
+      "3          Santiago               Ecuador       Emergencia   \n",
+      "4              Lima                 Chile         Consulta   \n",
+      "5             Quito             Argentina         Consulta   \n",
+      "6      Buenos Aires  República Dominicana       Emergencia   \n",
+      "7  Ciudad de México             Argentina       Emergencia   \n",
+      "8     Santo Domingo                México       Emergencia   \n",
+      "9          Santiago                 Chile       Emergencia   \n",
       "\n",
-      "         outcome  readmission_within_30_days  cost_usd  old_age  \n",
-      "0      Reingreso                           0   3851.00       92  \n",
-      "1  Fallecimiento                           1   2959.96       82  \n",
-      "2  Fallecimiento                           0   3632.33        4  \n",
-      "3           Alta                           0     85.57       96  \n",
-      "4  Fallecimiento                           0   2603.25       61  \n"
+      "   visit_duration_minutes        outcome  readmission_within_30_days  \\\n",
+      "0                     486      Reingreso                           0   \n",
+      "1                     572  Fallecimiento                           1   \n",
+      "2                     101  Fallecimiento                           0   \n",
+      "3                     589           Alta                           0   \n",
+      "4                       8  Fallecimiento                           0   \n",
+      "5                     393           Alta                           0   \n",
+      "6                     461  Fallecimiento                           0   \n",
+      "7                     584           Alta                           0   \n",
+      "8                     315     Referencia                           0   \n",
+      "9                     467     Referencia                           0   \n",
+      "\n",
+      "   cost_usd  old_age  \n",
+      "0   3851.00       92  \n",
+      "1   2959.96       82  \n",
+      "2   3632.33        4  \n",
+      "3     85.57       96  \n",
+      "4   2603.25       61  \n",
+      "5    453.08       10  \n",
+      "6    177.48       92  \n",
+      "7   1921.91      111  \n",
+      "8   4495.45       64  \n",
+      "9   1487.48       77  \n"
      ]
     }
    ],
@@ -2300,11 +2337,8 @@
     "#Revisando que la data fue cargada\n",
     "query = \"SELECT * FROM public.atenciones_medicas LIMIT 100;\"\n",
     "\n",
-    "# Execute query and load into DataFrame\n",
     "df2 = pd.read_sql(query, con=engine)\n",
-    "\n",
-    "# Preview the result\n",
-    "print(df.head())"
+    "print(df.head(10))"
    ]
   }
  ],
